    the renamed page in this case.
  * remove: Support removing of pages in the transient underlay. (smcv)
  * inline, trail: The pagenames parameter is now a list of absolute
    pagenames, not relative wikilink type names. This is necessary to fix
    a bug, and makes pagenames more consistent with the pagespec used
    in the pages parameter. (smcv)

 -- Joey Hess <joeyh@debian.org>  Wed, 21 Mar 2012 14:33:14 -0400

ikiwiki (3.20120203) unstable; urgency=low

  * osm: New plugin to embed an OpenStreetMap into a wiki page.
    Supports waypoints, tags, and can even draw paths matching
    wikilinks between pages containing waypoints.
    Thanks to Blars Blarson and Antoine Beaupré, as well as the worldwide
    OpenStreetMap community for this utter awesomeness.
  * trail: New plugin to add navigation trails through pages via Next and
    Previous links. Trails can easily be added to existing inlines by setting
    trail=yes in the inline.
    Thanks to Simon McVittie for his persistance developing this feature.
  * Fix a snail mail address. Closes: #659158
  * openid-jquery.js: Update URL of Wordpress favicon. Closes: #660549
  * Drop the version attribute on the generator tag in Atom feeds
    to make builds more reproducible. Closes: #661569 (Paul Wise)
  * shortcut: Support Wikipedia's form of url-encoding for unicode
    characters, which involves mojibake. Closes: #661198
  * Add a few missing jquery UI icons to attachment upload widget underlay.
  * URI escape filename when generating the diffurl.
  * Add build-affected hook. Used by trail.

 -- Joey Hess <joeyh@debian.org>  Mon, 19 Mar 2012 14:24:43 -0400

ikiwiki (3.20120202) unstable; urgency=low

  * mdwn: Added nodiscount setting, which can be used to avoid using the
    markdown discount engine, when maximum compatability is needed.
  * Switch to YAML::XS to work around insanity in YAML::Mo. Closes: #657533
  * cvs: Ensure text files are added in non-binary mode. (Amitai Schlair)