@@ -21,6 +21,7 @@ ikiwiki (3.20120204) UNRELEASED; urgency=low
     pagenames, not relative wikilink type names. This is necessary to fix
     a bug, and makes pagenames more consistent with the pagespec used
     in the pages parameter. (smcv)
+  * link: Fix renaming wikilinks that contain embedded urls.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 21 Mar 2012 14:33:14 -0400
 
